# PythonPiscine-42

./: .gitignore  README.md
Module0/ex00/: Hello.py
Module0/ex01/: format_ft_time.py
Module0/ex02/: find_ft_type.py  main.py
Module0/ex03/: NULL_not_found.py  main.py
Module0/ex04/: whatis.py
Module0/ex05/: building.py
Module0/ex06/: filterstring.py  ft_filter.py
Module0/ex07/: sos.py
Module0/ex08/: Loading.py
Module0/ex09/: LICENSE  README.md  setup.cfg  test.py
Module0/ex09/ft_package/: __init__.py  count.py
Module0/ex09/ft_package.egg-info/: PKG-INFO  SOURCES.txt
Module1/ex00/: give_bmi.py
Module1/ex01/: array2D.py
Module1/ex02/: load_image.py  tester.py
Module1/ex03/: zoom.py
Module1/ex04/: rotate.py
Module1/ex05/: load_image.py  pimp_image.py
Module2/ex01/: aff_life.py
Module2/ex02/: aff_pop.py  load_csv.py
Module2/ex03/: projection_life.py
Module3/ex01/: S1E7.py  S1E9.py  tester.py
Module3/ex02/: DiamondTrap.py
Module3/ex03/: ft_calculator.py
Module3/ex04/: ft_calculator.py
Module4/ex00/: lol.py  tester.py
Module4/ex01/: in_out.py
Module4/ex02/: callLimit.py  tester.py
Module4/ex03/: new_student.py  tester.py
