[metadata]
name = ft_package
version = 0.0.2
author = Jan
author_email = jan@42.fr
description = A sample test package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Jano844/ft_package
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6